<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context="com.app.rakez.winnersprit.EntryPointActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/layout_container">
        <FrameLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logo_holder">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/anim_1"
                android:id="@+id/logo_1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/anim_2"
                android:id="@+id/logo_2"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/anim_3"
                android:id="@+id/logo_3"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/anim_4"
                android:id="@+id/logo_4"/>

        </FrameLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_holder"
            android:id="@+id/layout_social_media_login">
    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_margin="@dimen/big_button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true" />
        <Button
            android:id="@+id/login_fb"
            android:padding="7dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/facebook"
            android:text="@string/facebook_login"
            android:drawableLeft="@drawable/ic_facebook_app_symbol"
            android:textColor="@color/text_color"/>
    </FrameLayout>
    <Button
        android:id="@+id/login_gp"
        android:padding="7dp"
        android:layout_below="@+id/FrameLayout1"
        android:layout_margin="@dimen/big_button_margin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_google_plus_logo"
        android:text="@string/common_signin_button_text_long"
        android:background="@color/google_plus"
        android:textColor="@color/text_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_login_tv"
        android:layout_below="@+id/login_gp"
        android:text="@string/login_with_winnersprit"
        android:clickable="true"
        android:textColor="#fff"
        android:textSize="17sp"
        android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_email_login"
        android:layout_below="@+id/layout_social_media_login">

        <android.support.v7.widget.AppCompatEditText
            android:padding="@dimen/edit_text_padding"
            android:layout_margin="@dimen/big_button_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_email"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email_hint"/>
        <android.support.v7.widget.AppCompatEditText
            android:padding="@dimen/edit_text_padding"
            android:layout_margin="@dimen/big_button_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_password"
            android:inputType="textPassword"
            android:layout_below="@+id/user_email"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/password_hint"/>
        <Button
            android:layout_margin="@dimen/big_button_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_below="@+id/user_password"
            android:text="@string/app_login"
            android:textColor="@color/text_color"
            android:background="@color/login_button"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_tv"
            android:layout_below="@+id/login_button"
            android:text="@string/register_with_winnersprit"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:textColor="#fff"
            android:textSize="17sp"
            />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout_email_register"
            android:layout_below="@+id/layout_email_login">

            <android.support.v7.widget.AppCompatEditText
                android:padding="@dimen/edit_text_padding"
                android:layout_margin="@dimen/big_button_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_user_email"
                android:drawableLeft="@drawable/ic_email"
                android:hint="@string/email_hint"/>
            <android.support.v7.widget.AppCompatEditText
                android:padding="@dimen/edit_text_padding"
                android:layout_margin="@dimen/big_button_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_user_password"
                android:inputType="textPassword"
                android:layout_below="@+id/new_user_email"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/password_hint"/>
            <android.support.v7.widget.AppCompatEditText
                android:padding="@dimen/edit_text_padding"
                android:layout_margin="@dimen/big_button_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_user_password_confirm"
                android:inputType="textPassword"
                android:layout_below="@+id/new_user_password"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/confirm_password_hint"/>
            <Button
                android:layout_margin="@dimen/big_button_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_button"
                android:layout_below="@+id/new_user_password_confirm"
                android:text="@string/app_register"
                android:textColor="@color/text_color"
                android:background="@color/login_button"
                android:textStyle="bold"/>

        </RelativeLayout>



    </RelativeLayout>
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</RelativeLayout>
